2024-10-19 Konstantin Kushnir <chpock@gmail.com>
	* Add attributes for files / dirs / VFS root
	* Add ::cookfs::sha256 command if c-crypto is enabled

2024-10-17 Konstantin Kushnir <chpock@gmail.com>
	* Use the compsize / uncompsize keys in pages info

2024-10-16 Konstantin Kushnir <chpock@gmail.com>
	* Add support for -metadata for VFS root attributes
	* Add support for -pages for VFS root attributes
	* Store pagesize/smallfilesize/smallfilebuffer properties as fsindex
	  metadata and use these values after reopening

2024-10-13 Konstantin Kushnir <chpock@gmail.com>
	* Cleanup sources

2024-10-12 Konstantin Kushnir <chpock@gmail.com>
	* Add a fileset feature to VFS
	* Allow to link with zlib directly (without Tcl layer)
	* Allow to link with mbedtls and use its crypto functions
	* Allow to build without Tcl callbacks

2024-10-10 Konstantin Kushnir <chpock@gmail.com>
	* Add a fileset feature to fsindex

2024-10-09 Konstantin Kushnir <chpock@gmail.com>
	* Refactor tests

2024-10-03 Konstantin Kushnir <chpock@gmail.com>
	* Improve deduplication. Detect adding a file with the same contents
	and using previously allocated disk space.

2024-09-15 Konstantin Kushnir <chpock@gmail.com>
	* Fix a bug with opening local files when their path starts as a VFS mount
	point
	* Equalize error messages for decryption failures, as different error
	messages led to flaky test
	* Fix 'glob' on mounted volumes like 'mount:/'
	* Improve thread stability by fixing possible double frees

2024-09-14 Konstantin Kushnir <chpock@gmail.com>
	* Fix -eofchar issue on Windows and Tcl 9.0b3

2024-09-09 Konstantin Kushnir <chpock@gmail.com>
	* Fix compatibility with Tcl 9.0b3

2024-09-07 Konstantin Kushnir <chpock@gmail.com>
	* Refactor threads tests to make them more reliable
	* Fix possible deadlock

2024-08-23 Konstantin Kushnir <chpock@gmail.com>
	* Fix a bug where mounting an archive with an invalid password in
	read-write mode did not return an error
