@@ -1,3 +1,6 @@
+2024-10-20 Konstantin Kushnir <chpock@gmail.com>
+	* Improve statibility to thread tests
+
 2024-10-19 Konstantin Kushnir <chpock@gmail.com>
 	* Add attributes for files / dirs / VFS root
 	* Add ::cookfs::sha256 command if c-crypto is enabled
